# academic_ai_guideline_repo

./: .gitignore  .gitlab-ci.yml  .sync-exclude.lst  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  guidelines.yaml  index.json  pyproject.toml  requirements.txt
downloads/: algorithmwatch_1_0.html  allea_1_0.html  apri-armenia_1_0.html  aspen-institute_1_0.html  brookings-institution.html  bundeszentrale-fur-politische-bildung_1_0.html  center-for-democracy-and-technology_1_0.html  fh-munster_1_0.html  frankfurt-uas_1_0.html  fsu-jena_1_0.html  goethe-universitat-frankfurt_1_0.html  hochschule-munchen_1_0.html  hochschule-zittau-gorlitz_1_0.html  htwk-leipzig_1_0.html  humboldt-universitat.html  institute-for-government_1_0.html  institute-for-public-relations_1_0.html  leibniz-universitat-hannover_1_0.html  oecd.html  reporters-without-borders_1_0.html  tab.html  th-mittelhessen_1_0.html  tu-berlin.html  universitat-augsburg_1_0.html  universitat-mannheim_1_0.html  universitat-osnabruck_1_0.html  universitat-tubingen.html  universitat-tubingen_2_0.html  urban-institute_1_0.htm  wame_1_0.html  weizenbaum-institut_1_0.html
outputs/: albanian-media-institute_1_0.json  algorithmwatch_1_0.json  allea_1_0.json  apri-armenia_1_0.json  aspen-institute_1_0.json  berlin-universities-publishing.json  bertelsmann-stiftung_1_0.json  bmi_1_0.json  brookings-institution.json  brookings-institution_1_0.json  bundeszentrale-fur-politische-bildung.json  bundeszentrale-fur-politische-bildung_1_0.json  ca-foscari-university-of-venice.json  cau-kiel_1_0.json  d-64_1_0.json  dzsf.json  (+93 more)
(+409 files in other folders)
