[project]
name = "ai-guidelines-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "mistralai>=2.3.2",
    "openai>=2.31.0",
    "pymupdf>=1.24",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
]
